--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cy:open": "npx cypress open --env allure=true --browser chrome",
+    "cy:run": "yarn cypress run --config video=false --env allure=true --browser chrome",
+    "allure:report": "allure generate allure-results --clean -o allure-report",
+    "allure:clear": "rm -r allure-results/ allure-report/latest cypress/screenshots || true",
+    "allure:history": "mv -f allure-report/latest/history allure-results/history && rm -r allure-report/latest || true"
   },
   "author": "Edgar Ysabel",
   "license": "ISC",
   "devDependencies": {
     "@ngneat/falso": "^7.1.1",
-    "cypress": "^13.6.1"
+    "cypress": "^13.6.1",
+    "cypress-plugin-api": "^2.11.1"
   }
 }
