--- a/.github/workflows/allure.yaml
+++ b/.github/workflows/allure.yaml
@@ -38,18 +38,13 @@ jobs:
       - name: Run Cypress
         run: npm run cy:run
 
-      - name: Generate Allure report
-        if: always()
-        run: npm run allure:report
-
       - name: Commit report results
         if: always()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add allure-report -f
-          git add allure-results -f
-          git commit -m "[chore] autogenerate Allure report" -a
+          git add mochawesome-report -f
+          git commit -m "[chore] autogenerate Mochawesome report" -a
 
       - name: Push changes
         if: always()
