--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "cy:open": "npx cypress open --env allure=true --browser chrome",
-    "cy:run": "yarn cypress run --config video=false --env allure=true --browser chrome",
-    "allure:report": "allure generate allure-results --clean -o allure-report",
-    "allure:clear": "rm -r allure-results/ allure-report/latest cypress/screenshots || true",
-    "allure:history": "mv -f allure-report/latest/history allure-results/history && rm -r allure-report/latest || true"
+    "cy:run": "npx cypress run --config video=false --reporter mochawesome --browser chrome"
   },
   "author": "Edgar Ysabel",
   "license": "ISC",
   "devDependencies": {
     "@ngneat/falso": "^7.1.1",
     "cypress": "^13.6.1",
-    "cypress-plugin-api": "^2.11.1"
+    "cypress-plugin-api": "^2.11.1",
+    "mochawesome": "^7.1.3"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "cypress-mochawesome-reporter": "^3.7.0",
+    "save-dev": "^0.0.1-security"
   }
 }
