--- a/.github/workflows/allure.yaml
+++ b/.github/workflows/allure.yaml
@@ -38,13 +38,19 @@ jobs:
       - name: Run Cypress
         run: npm run cy:run
 
+      - name: Generate Mochawesome report
+        if: always()
+        run: |
+          npm run report:merge
+          npm run report:generate
+
       - name: Commit report results
         if: always()
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add mochawesome-report -f
-          git commit -m "[chore] autogenerate Mochawesome report" -a
+          git add mochawesome-report/index.html -f
+          git commit -m "[chore] autogenerate Allure report" -a
 
       - name: Push changes
         if: always()
